--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,9 @@
+@import 'variables';
 @import 'base';
 @import 'points';
 @import 'home';
 @import 'dice';
 @import 'setup';
+@import 'controls';
 @import 'winner_popup';
+@import 'status';
