--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,6 +1,8 @@
 body {
   font-family: Arial;
   font-size: 16px;
+  background: $background;
+  margin: 0;
 }
 
 input, textarea {
@@ -16,18 +18,14 @@ input, textarea {
 }
 
 .game {
-  width: 670px;
+  width: calc(100% - 750px);
   position: relative;
+  //border: 1px solid red;
+  height: 995px;
+  margin: 10px;
 }
 
 .board {
   position: relative;
-}
-
-.status {
-  position: absolute;
-  top: 100px;
-  right: -220px;
-  padding: 20px;
-  font-size: 0.9em;
+  height: 100%;
 }
