--- a/sass/_setup.scss
+++ b/sass/_setup.scss
@@ -1,22 +1,34 @@
 .setup {
-  margin: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .setup_row {
   padding: 10px;
+  clear: both;
 }
 
 .setup_input {
-  padding: 5px 10px 5px 0;
+  padding: 10px 15px;
+  font-size: 16px;
   border: 0;
   border-bottom: 1px solid grey;
+  margin-right: 14px;
+  float: left;
 }
 
 .setup_button {
-  padding: 7px 10px;
+  padding: 12px 15px;
+  font-size: 16px;
   background: #2db4ff;
   color: #ffffff;
+  border-radius: 10px;
   cursor: pointer;
+  text-align: center;
+  min-width: 120px;
+  float: left;
   &:hover {
     background: #0b47f1;
   }
