--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,7 +20,6 @@ input, textarea {
 .game {
   width: calc(100% - 750px);
   position: relative;
-  //border: 1px solid red;
   height: 995px;
   margin: 10px;
 }
@@ -28,4 +27,17 @@ input, textarea {
 .board {
   position: relative;
   height: 100%;
+}
+
+.button {
+  padding: 12px 15px;
+  font-size: 16px;
+  background: #2db4ff;
+  color: #ffffff;
+  border-radius: 10px;
+  cursor: pointer;
+  text-align: center;
+  &:hover {
+    background: #0b47f1;
+  }
 }
