--- a/sass/_winner_popup.scss
+++ b/sass/_winner_popup.scss
@@ -5,16 +5,27 @@
   right: -300px;
   left: 0;
   bottom: -300px;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 30;
 }
 
 .winner-popup {
+  border-radius: 10px;
   position: absolute;
   background: #ffffff;
   padding: 50px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 1px solid #2db4ff;
+  z-index: 31;
+  box-shadow: 0 0 2px 1px #000000;
+}
+
+.winner-popup_text {
+  margin-bottom: 14px;
+}
+
+.winner-popup_button {
+  @extend .button;
 }
 
