--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,22 +16,24 @@ input, textarea {
 .game {
   width: calc(100% - 750px);
   position: relative;
-  height: 995px;
-  margin: 10px; }
+  height: 985px; }
 
 .board {
   position: relative;
-  height: 100%; }
+  height: 100%;
+  top: 22.5px;
+  left: 22.5px; }
 
-.button, .setup_button, .controls_button, .winner-popup_button {
+.button, .setup_button, .controls_button, .winner-popup_button, .chat_send-message_button {
   padding: 12px 15px;
   font-size: 16px;
   background: #2db4ff;
   color: #ffffff;
   border-radius: 10px;
   cursor: pointer;
-  text-align: center; }
-  .button:hover, .setup_button:hover, .controls_button:hover, .winner-popup_button:hover {
+  text-align: center;
+  box-shadow: 0 0 2px 1px #000000; }
+  .button:hover, .setup_button:hover, .controls_button:hover, .winner-popup_button:hover, .chat_send-message_button:hover {
     background: #0b47f1; }
 
 .row {
@@ -71,13 +73,31 @@ input, textarea {
 .row .point:last-child {
   margin-right: 0; }
 
-@keyframes example {
+@keyframes puttable {
   from {
     background-color: #F6EED7;
     box-shadow: 0 0 0 0; }
   to {
     background-color: #ffffff;
     box-shadow: 0 0 5px 1px #000000; } }
+
+@keyframes selected {
+  from {
+    box-shadow: 0 0 2px 1px #000000; }
+  to {
+    box-shadow: 0 0 4px 2px #000000; } }
+
+@keyframes kill {
+  from {
+    top: 12px;
+    bottom: 12px;
+    left: 12px;
+    right: 12px; }
+  to {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; } }
 
 .point div {
   background: #F6EED7;
@@ -88,67 +108,86 @@ input, textarea {
   right: 12px;
   border-radius: 50%; }
 
-.point.\--blocked div {
+.point.-blocked div {
   background: #666666;
   box-shadow: 0 0 2px 1px #000000; }
 
-.point.\--puttable div {
+.point.-puttable div {
   background: #F6EED7;
-  animation-name: example;
+  animation-name: puttable;
   animation-duration: 1s;
   animation-iteration-count: infinite;
   cursor: pointer; }
-  .point.\--puttable div:hover {
+  .point.-puttable div:hover {
     background: white; }
 
-.point.\--puttable-barricade div {
+.point.-puttable-barricade div {
   background: #cccccc;
   cursor: pointer; }
-  .point.\--puttable-barricade div:hover {
+  .point.-puttable-barricade div:hover {
     background: #888888; }
 
-.point.\--pickable {
+.point.-pickable {
   cursor: pointer; }
 
-.point.\--red div {
+.point.-kill-animation div {
+  animation-name: kill;
+  animation-duration: .5s;
+  z-index: 100; }
+
+.point.-kill-animation div:after {
+  content: '';
+  position: absolute;
+  top: 12px;
+  bottom: 12px;
+  left: 12px;
+  right: 12px;
+  border-radius: 50%;
+  box-shadow: 0 0 2px 1px #000000; }
+
+.point.-red div,
+.point.-killer-red div:after {
   background: #F66332;
   box-shadow: 0 0 2px 1px #000000; }
 
-.point.\--pickable.\--red div:hover {
-  background: #faad94; }
+.point.-pickable.-red div:hover {
+  background: #fbc0ac; }
 
-.point.\--puttable.\--red div {
-  background: #fcd3c5; }
+.point.-picked.-red div {
+  background: #f99b7b; }
 
-.point.\--yellow div {
+.point.-yellow div,
+.point.-killer-yellow div:after {
   background: #F1E54F;
   box-shadow: 0 0 2px 1px #000000; }
 
-.point.\--pickable.\--yellow div:hover {
+.point.-pickable.-yellow div:hover {
   background: #cabc10; }
 
-.point.\--puttable.\--yellow div {
-  background: #fcfadd; }
-
-.point.\--green div {
+.point.-green div,
+.point.-killer-green div:after {
   background: #40B54F;
   box-shadow: 0 0 2px 1px #000000; }
 
-.point.\--pickable.\--green:hover div {
+.point.-pickable.-green:hover div {
   background: #87d491; }
 
-.point.\--puttable.\--green div {
-  background: #ace2b3; }
-
-.point.\--blue div {
+.point.-blue div,
+.point.-killer-blue div:after {
   background: #5699D1;
   box-shadow: 0 0 2px 1px #000000; }
 
-.point.\--pickable.\--blue:hover div {
+.point.-pickable.-blue:hover div {
   background: #a6c9e7; }
 
-.point.\--puttable.\--blue div {
-  background: #cee2f2; }
+.point.-picked div {
+  animation-name: selected;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  cursor: pointer; }
+
+.point.-picked div:hover {
+  box-shadow: 0 0 3px 1px #000000; }
 
 [point_id="13,0"] {
   border-radius: 0 0 0 25%; }
@@ -282,8 +321,11 @@ input, textarea {
   position: absolute;
   transform: translate(-50%);
   width: 20%;
-  top: 20px;
-  padding-bottom: 10px; }
+  top: 0;
+  background: #F6EED7;
+  padding: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px; }
 
 .home_pawns {
   display: flex;
@@ -294,7 +336,8 @@ input, textarea {
   display: block;
   width: 30px;
   height: 30px;
-  border-radius: 50%; }
+  border-radius: 50%;
+  box-shadow: 0 0 2px 1px #000000; }
 
 .\--is-players-turn .home_pawns span {
   cursor: pointer; }
@@ -306,7 +349,8 @@ input, textarea {
   border: 5px solid #000000; }
 
 .\--is-players-turn {
-  border-bottom: 5px solid black; }
+  border-bottom: 5px solid black;
+  background: #d9ceb7; }
 
 .home[color="red"] {
   left: 14.35%; }
@@ -344,13 +388,14 @@ input, textarea {
   cursor: pointer;
   font-size: 20px;
   padding: 20px;
-  border-radius: 50%; }
+  border-radius: 50%;
+  box-shadow: 0 0 2px 1px #000000; }
   .home_pick-color:first-child {
     float: left;
-    margin-left: 20%; }
+    margin-left: 12%; }
   .home_pick-color:last-child {
     float: right;
-    margin-right: 20%; }
+    margin-right: 12%; }
 
 .home_nickname {
   text-align: center;
@@ -364,8 +409,8 @@ input, textarea {
 
 .dice {
   position: absolute;
-  right: 0;
-  top: 7px;
+  right: -20px;
+  top: 22.5px;
   box-shadow: 0 0 2px 1px #000000;
   border-radius: 10px;
   width: 40px;
@@ -385,8 +430,8 @@ input, textarea {
 
 .dice.-rolling {
   top: 0;
-  right: 0;
-  bottom: 0;
+  right: -50px;
+  bottom: -25px;
   left: 0;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 0;
@@ -487,8 +532,8 @@ input, textarea {
 
 .controls {
   position: absolute;
-  top: 7px;
-  left: 0;
+  top: 22.5px;
+  left: 22.5px;
   z-index: 10; }
 
 .controls_button {
@@ -498,10 +543,11 @@ input, textarea {
     background: #0b47f1; }
 
 .controls_speed {
-  padding: 10px 15px;
+  padding: 12px 15px;
   font-size: 16px;
   border-radius: 10px;
-  border: 1px solid #cccccc;
+  border: 0;
+  box-shadow: 0 0 2px 1px #000000;
   float: left;
   margin-right: 14px; }
 
@@ -513,9 +559,9 @@ input, textarea {
   content: '';
   position: absolute;
   top: 0;
-  right: -300px;
+  right: -50px;
   left: 0;
-  bottom: -300px;
+  bottom: -25px;
   background: rgba(255, 255, 255, 0.8);
   z-index: 30; }
 
@@ -532,6 +578,51 @@ input, textarea {
 
 .winner-popup_text {
   margin-bottom: 14px; }
+
+.chat {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: #f2f2f2;
+  width: 700px;
+  box-shadow: inset 7px 0 9px -7px #000000; }
+
+.chat_messages {
+  position: absolute;
+  bottom: 100px;
+  left: 0;
+  right: 0;
+  top: 0;
+  overflow-x: auto; }
+
+.chat_message {
+  padding: 10px 20px; }
+
+.chat_message_nickname {
+  font-weight: bold; }
+
+.chat_send-message {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100px;
+  padding: 20px; }
+
+.chat_send-message_input {
+  padding: 20px;
+  border-radius: 10px;
+  border: 0;
+  float: left;
+  margin-right: 20px;
+  width: calc(100% - 100px);
+  box-shadow: 0 0 2px 1px #000000; }
+
+.chat_send-message_button {
+  float: left;
+  padding: 20px;
+  width: 80px; }
 
 .status {
   position: absolute;
