--- a/sass/_points.scss
+++ b/sass/_points.scss
@@ -43,9 +43,19 @@
   margin-right: 0;
 }
 
-@keyframes example {
+@keyframes puttable {
   from {background-color: #F6EED7; box-shadow: 0 0 0 0;}
   to {background-color: #ffffff; box-shadow: 0 0 5px 1px #000000;}
+}
+
+@keyframes selected {
+  from {box-shadow: 0 0 2px 1px #000000}
+  to {box-shadow: 0 0 4px 2px #000000}
+}
+
+@keyframes kill {
+  from {top: 12px;bottom: 12px;left: 12px;right: 12px;}
+  to {top: 0;bottom: 0;left: 0;right: 0;}
 }
 
 .point {
@@ -60,14 +70,14 @@
     border-radius: 50%;
   }
 
-  &.--blocked div {
+  &.-blocked div {
     background: #666666;
     box-shadow: 0 0 2px 1px #000000;
   }
 
-  &.--puttable div {
+  &.-puttable div {
     background: #F6EED7;
-    animation-name: example;
+    animation-name: puttable;
     animation-duration: 1s;
     animation-iteration-count:infinite;
     cursor: pointer;
@@ -76,7 +86,7 @@
     }
   }
 
-  &.--puttable-barricade div {
+  &.-puttable-barricade div {
     background: #cccccc;
     cursor: pointer;
     &:hover {
@@ -84,60 +94,80 @@
     }
   }
 
-  &.--pickable {
+  &.-pickable {
     cursor: pointer;
   }
 
-  &.--red div {
+  &.-kill-animation div {
+    animation-name: kill;
+    animation-duration: .5s;
+    z-index: 100;
+  }
+
+  &.-kill-animation div:after {
+    content: '';
+    position: absolute;
+    top: 12px;
+    bottom: 12px;
+    left: 12px;
+    right: 12px;
+    border-radius: 50%;
+    box-shadow: 0 0 2px 1px #000000;
+  }
+
+  &.-red div,
+  &.-killer-red div:after  {
     background: $red;
     box-shadow: 0 0 2px 1px #000000;
   }
 
-  &.--pickable.--red div:hover {
-    background: lighten($red, 20%);
+  &.-pickable.-red div:hover {
+    background: lighten($red, 25%);
   }
 
-  &.--puttable.--red div {
-    background: lighten($red, 30%);
+  &.-picked.-red div {
+    background: lighten($red, 15%);
   }
 
-  &.--yellow div {
+  &.-yellow div,
+  &.-killer-yellow div:after {
     background: $yellow;
     box-shadow: 0 0 2px 1px #000000;
   }
 
-  &.--pickable.--yellow div:hover {
+  &.-pickable.-yellow div:hover {
     background: darken($yellow, 20%);
   }
 
-  &.--puttable.--yellow div {
-    background: lighten($yellow, 30%);
-  }
-
-  &.--green div {
+  &.-green div,
+  &.-killer-green div:after {
     background: $green;
     box-shadow: 0 0 2px 1px #000000;
   }
 
-  &.--pickable.--green:hover div {
+  &.-pickable.-green:hover div {
     background: lighten($green, 20%);
   }
 
-  &.--puttable.--green div {
-    background: lighten($green, 30%);
-  }
-
-  &.--blue div {
+  &.-blue div,
+  &.-killer-blue div:after {
     background: $blue;
     box-shadow: 0 0 2px 1px #000000;
   }
 
-  &.--pickable.--blue:hover div {
+  &.-pickable.-blue:hover div {
     background: lighten($blue, 20%);
   }
 
-  &.--puttable.--blue div {
-    background: lighten($blue, 30%);
+  &.-picked div {
+    animation-name: selected;
+    animation-duration: 1s;
+    animation-iteration-count:infinite;
+    cursor: pointer;
+  }
+
+  &.-picked div:hover {
+    box-shadow: 0 0 3px 1px #000000;
   }
 }
 
